examples/errors/missing_return_if_else/main.hd
import std::io

fn check(x: int): int {
    if (x > 0) {
        return 1;
    } else {
        let y = 0;
    }
}

fn main(): int {
    return 0;
}
